[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
glium = "0.32.1"

[dependencies]
gl = "0.14.0"
log = "0.4.0"
bytemuck = "1.13.1"
env_logger = "0.10.0"

math = { path = "../math" }
geometric = { path = "../geometric" }