[package]
name = "playgrounds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math = {path = "../math"}
geometric = {path = "../geometric"}
graphics = {path = "../graphics"}
physics = {path = "../physics"}
raylib = "3.7.0"
rand = "0.8.5"