[package]
name = "visual-debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
glium = "0.32.1"

math = {path = "../../math"}
geometric = {path = "../../geometric"}
graphics = {path = "../../graphics"}
window = {path = "../../window"}