[package]
name = "visual-debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
raylib = "3.7.0"
toml = "0.7.3"
serde = { version = "1.0.160", features = ["derive"] }

math = {path = "../../math"}
geometric = {path = "../../geometric"}
graphics = {path = "../../graphics"}
